--- a/Project5/style.css
+++ b/Project5/style.css
@@ -65,14 +65,12 @@ body{
     width: 100%;
     position: relative;
     display: flex;
-    
 }
 
 .content-left{
     height: 100%;
     width: 40%;
     padding: 80px 100px;
-    
 }
 
 .content-left h5{
@@ -97,11 +95,13 @@ body{
 }
 
 .btn{
-    background-color: #c9c8c8;
+    background-color: #000;
     color: #fff;
     font-size: 15px;
     padding: 12px 40px;
     font-weight: 600;
+    border: none;
+    border-radius: 50px;
     border-top-left-radius: 0;
 }
 
